# stocker-app

./: .gitignore  Makefile  README.md  netlify.toml  pyproject.toml  render.yaml
.context/: backend-architecture.md  frontend-architecture.md
.docs/: TODO.md  admin_plan.md  may6_evaluation.md
.docs/ai_artifact/: 12_Gemini_deployment-walkthrough.md  13_Codex_architecture-refactor-plan.md  7_Claude_backend-design.md
.docs/ai_chat/: 10_Codex_規劃管理員帳號.md  11_Claude_擴充設定頁面.txt  12_Gemini_網頁部署.md  13_Codex_重構程式碼庫.md  2_Claude_implementation-plan.md  3_Codex_實作股票記帳WebApp.md  4_Claude_修正後端設計.txt  5_Codex_優化UI和UX.md  7_Claude_後端設計建議.txt  8_Codex_後端實踐.md  9_Codex_重構與安全審查.md
backend/: config.py  main.py  requirements.txt  test_yf.py
backend/admin/: metrics.py
backend/api/: admin.py  cashflow.py  dashboard.py  deps.py  export.py  feedbacks.py  holdings.py  realized.py  settings.py  stocks.py  transactions.py
backend/data/: cashflow.csv  settings.json  stocks.csv  transactions.csv
backend/models/: schemas.py
backend/routers/: admin.py  cashflow.py  dashboard.py  deps.py  export.py  holdings.py  realized.py  settings.py  stocks.py  transactions.py
backend/services/: admin_service.py  calculator.py  csv_service.py  excel_service.py  price_service.py  supabase_service.py
backend/tests/: test_admin_service.py  test_api.py  test_auth.py  test_calculator.py  test_export.py  test_price_service.py  test_supabase_migrations.py  (+1 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
scripts/: migrate_csv.py
(+129 files in other folders)
